--- a/style.css
+++ b/style.css
@@ -11,7 +11,50 @@ License URI: http://www.gnu.org/licenses/glp-2.0.html
 Tags: e-commerce, custom-menu, custom-logo, featured-image, footer-widgets, theme-options, translation-readym blog, right-sidebar, sticky-post, threaded-comments
 */
 
-.top-bar {
-  background: red;
-  height: 70px;
+.brand {
+  background: green;
+}
+
+.second-column {
+  background: yellow;
+}
+
+.main-menu ul {
+  padding: 0;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 0;
+}
+
+.main-menu ul li {
+  display: inline;
+  margin: 0 5px 0 0;
+}
+
+/* Footer - Footer Menu */
+.footer-menu ul,
+.footer-widgets ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 16px;
+}
+
+.footer-menu ul li {
+  display: inline;
+  margin: 0 10px 0 0;
+}
+
+.footer-menu ul li:last-child {
+  margin: 0;
+}
+
+.footer-menu ul li a {
+  color: #939393;
+  text-decoration: none;
+}
+
+.footer-menu ul li.current-menu-item a {
+  color: #ff9292;
 }
